deploy/isin-validation/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: isin-validation-service
spec:
  selector:
    app: isin-validation-app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: isin-validation-port
  type: NodePort
